<resources>
    <string name="app_name">Bla Bla</string>
    <string name="default_web_client_id">238562761377-dk43ngig8gnkvn902df0lgp0gjoip73l.apps.googleusercontent.com</string>
    <string name="hello_welcome_back">Hello, Welcome Bla Bla </string>
    <string name="happy_to_see_you_again_to_use_your_naccount_please_login_first">Happy to see you , to use your\naccount please login first.</string>
    <string name="temail_address">\tEmail </string>
    <string name="tpassword">\tPassword</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="image_welcome">image Welcome</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="home">Chats</string>
    <string name="add_friends">Friends</string>
    <string name="setting">Setting</string>


    <string name="facebook_app_id">1348788842516419</string>
    <string name="fb_login_protocol_scheme">fb1348788842516419</string>
    <string name="facebook_client_token">8ecaeed3faad339fdc2cbdf282404576</string>
    <string name="search_chat">Search Chat</string>
    <string name="call">Call</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Type your name</string>
    <string name="profile_status">Status</string>
    <string name="profile_btn_done">Done</string>
    <string name="or_loging_with">ــــــــــــــــــ or Loging with ــــــــــــــــــ</string>
    <string name="Profile">profile</string>


</resources>