<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chats"
        android:icon="@drawable/home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/addFriends"
        android:icon="@drawable/person_add_alt_1_24"
        android:title="@string/add_friends"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/call"
        android:icon="@drawable/call_24"
        android:title="@string/call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/settings_24"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />


</menu>