<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>

        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".util.LoginActivity">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="180.22dp"
                    android:layout_height="229dp"
                    android:contentDescription="@string/image_welcome"
                    android:rotation="20"
                    android:src="@drawable/img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.984"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.031" />

                <TextView
                    android:id="@+id/txt_welcome"
                    android:layout_width="229dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/hello_welcome_back"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.116" />

                <TextView
                    android:id="@+id/txt_welcome2"
                    android:layout_width="288dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/happy_to_see_you_again_to_use_your_naccount_please_login_first"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.169" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="340dp"
                    android:layout_height="57dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/input_info"
                    android:drawableStart="@drawable/baseline_mail"
                    android:ems="10"
                    android:hint="@string/temail_address"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_password"
                            android:layout_width="340dp"
                            android:layout_height="57dp"
                            android:autofillHints="Password"
                            android:background="@drawable/input_info"
                            android:ems="10"
                            android:hint="@string/tpassword"
                            android:inputType="textPassword"
                            android:drawableStart="@drawable/baseline_lock"
                            android:padding="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ed_email"
                            app:layout_constraintVertical_bias="0.126" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/forget_password"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.94"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.596" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="340dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/black_purple"
                    android:text="@string/login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.61"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.71" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ــــــــــــــــــ or Loging with ــــــــــــــــــ"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.807" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_gmail"
                    android:layout_width="40dp"
                    android:layout_height="43dp"
                    android:background="@drawable/google_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.425"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.908" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/facebook"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.611"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.907" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>